# trowel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: qc.yml
data/essdive_flmd/: README.md  data_dictionaries.tsv  filetable.tsv  frequencies.tsv  variable_names.tsv
notebooks/: bervo-src.csv  bervo_terms_only.csv  new-terms.csv  term_clustering.ipynb
src/llm_ontology_mapping/: match_bervo_to_como_pydantic_ai.py  remap_bervo_como_cborg.py
src/trowel/: cli.py
src/trowel/utils/: __init__.py  embedding_generation_utils.py  embedding_utils.py  matching_utils.py  similarity_utils.py  string_utils.py  visualization_utils.py
src/trowel/wrappers/: essdive.py
tests/: conftest.py  test_cli_embeddings.py  test_embedding_generation.py
tests/trowel/wrappers/: test_essdive.py  test_essdive_api.py
