[tool.poetry]
name = "trowel"
version = "0.0.1"
description = "TROWEL - a Tool for Retrieving, Organizing, and Wrangling Earth science data and Labels"
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"
polars = "^1.19.0"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
curategpt = "^0.1.0"
duckdb = "^0.9.0"
numpy = "^1.24.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.12.0"

[tool.poetry.scripts]
trowel = "trowel.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
